--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ author:
 paginate:         1
 
 github:
-  repo:           https://github.com/IMG-FlowCloud/geofence
+  repo:           https://github.com/FlowCloud/geofence
